--- a/src/routes/memorama.css
+++ b/src/routes/memorama.css
@@ -1,30 +1,28 @@
 
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    font-size: 1.5em;
-    text-align: center;
-    background: #1b1523;
-    color: #fff;
-}
-
 .App {
-    max-width: 860px;
+    max-width: 1200px;
     margin: 40px auto;
 }
 
 button {
     background: none;
-    border: 2px solid #fff;
+    border: 2px solid #f8fc37;
     padding: 6px 12px;
     border-radius: 4px;
-    color: #fff;
+    color: #8c1391;
     font-weight: bold;
     cursor: pointer;
     font-size: 1em;
 }
 
 button:hover {
-    background: #c23866;
-    color: #fff;
+    background: #a1f541;
+    color: #8c1391;
+}
+
+.card-grid{
+    margin-top: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr ;
+    grid-gap: 5px
 }
